# PyPmltracker

./: README.md  pyproject.toml
api/: client.py  server.py
benchmarks/: benchmark_logging.py
core/: experiment.py  system_monitor.py
docs/: user_guide.md
integrations/: pytorch.py  sklearn.py  tensorflow.py
src/pypmltracker/: __init__.py  setup.py
src/pypmltracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
storage/: cloud.py  local.py
tests/: conftest.py  test_all.py  test_api.py  test_core.py  test_integrations.py  test_storage.py  test_visualization.py
utils/: logging.py  serialization.py
visualization/: dashboard.py  plots.py
